--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
@@ -1020,7 +1020,7 @@
   <data name="Failed_LAN" xml:space="preserve">
     <value>Impossible de se connecter au site Web.</value>
   </data>
-  <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
+  <data name="c" xml:space="preserve">
     <value>Impossible de charger les paramètres INI</value>
   </data>
   <data name="Fatal_word" xml:space="preserve">
@@ -2879,5 +2879,47 @@
   </data>
   <data name="Seconds_word" xml:space="preserve">
     <value>secondes...</value>
+  </data>
+  <data name="Pending_word" xml:space="preserve">
+    <value>En attente</value>
+  </data>
+  <data name="Suspended_word" xml:space="preserve">
+    <value>Suspendu</value>
+  </data>
+  <data name="NoLogin_word" xml:space="preserve">
+    <value>Pas de connexion</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>Attendre</value>
+  </data>
+  <data name="Restarting_Now_word" xml:space="preserve">
+    <value>Redémarrer maintenant</value>
+  </data>
+  <data name="Quitting_word" xml:space="preserve">
+    <value>En quittant</value>
+  </data>
+  <data name="Booting_word" xml:space="preserve">
+    <value>Démarrage</value>
+  </data>
+  <data name="SSDelay" xml:space="preserve">
+    <value>Arrêt en quelques secondes</value>
+  </data>
+  <data name="Recycling_Up_word" xml:space="preserve">
+    <value>Recyclage</value>
+  </data>
+  <data name="ViewAllMaps" xml:space="preserve">
+    <value>Afficher toutes les cartes</value>
+  </data>
+  <data name="Wait_For_scripts" xml:space="preserve">
+    <value>Attendez les scripts</value>
+  </data>
+  <data name="SecondsTips" xml:space="preserve">
+    <value>Combien de temps une région en cours d'exécution restera-t-elle active après le départ d'un avatrar?</value>
+  </data>
+  <data name="Home_Stopped" xml:space="preserve">
+    <value>Accueil arrêté</value>
+  </data>
+  <data name="Recycling_Down_word" xml:space="preserve">
+    <value>Recyclage du duvet</value>
   </data>
 </root>
