--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pt.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pt.resx
@@ -1020,7 +1020,7 @@
   <data name="Failed_LAN" xml:space="preserve">
     <value>Falha ao conectar ao web site.</value>
   </data>
-  <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
+  <data name="c" xml:space="preserve">
     <value>Falha ao carregar Configurações INI</value>
   </data>
   <data name="Fatal_word" xml:space="preserve">
@@ -2879,5 +2879,47 @@
   </data>
   <data name="Seconds_word" xml:space="preserve">
     <value>Segundos</value>
+  </data>
+  <data name="Pending_word" xml:space="preserve">
+    <value>Pendente</value>
+  </data>
+  <data name="Suspended_word" xml:space="preserve">
+    <value>Suspenso</value>
+  </data>
+  <data name="NoLogin_word" xml:space="preserve">
+    <value>Sem Login</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>Espera</value>
+  </data>
+  <data name="Restarting_Now_word" xml:space="preserve">
+    <value>Reiniciando agora</value>
+  </data>
+  <data name="Quitting_word" xml:space="preserve">
+    <value>Desistindo</value>
+  </data>
+  <data name="Booting_word" xml:space="preserve">
+    <value>Inicializando</value>
+  </data>
+  <data name="SSDelay" xml:space="preserve">
+    <value>Desligamento em segundos</value>
+  </data>
+  <data name="Recycling_Up_word" xml:space="preserve">
+    <value>Reciclando</value>
+  </data>
+  <data name="ViewAllMaps" xml:space="preserve">
+    <value>Ver todos os mapas</value>
+  </data>
+  <data name="Wait_For_scripts" xml:space="preserve">
+    <value>Espere pelos scripts</value>
+  </data>
+  <data name="SecondsTips" xml:space="preserve">
+    <value>Quanto tempo uma região em execução permanecerá ativa após a saída de um avatrar</value>
+  </data>
+  <data name="Home_Stopped" xml:space="preserve">
+    <value>Home Stopped</value>
+  </data>
+  <data name="Recycling_Down_word" xml:space="preserve">
+    <value>Reciclando</value>
   </data>
 </root>
