--- a/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
@@ -2664,7 +2664,7 @@
   <data name="Region_full_msg" xml:space="preserve">
     <value>Maks Avatar sayısı + NPC</value>
   </data>
-  <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
+  <data name="c" xml:space="preserve">
     <value>Ayarlar INI yüklenemedi</value>
   </data>
   <data name="Setup_Graphs_word" xml:space="preserve">
@@ -2879,5 +2879,47 @@
   </data>
   <data name="Seconds_word" xml:space="preserve">
     <value>Saniye</value>
+  </data>
+  <data name="Pending_word" xml:space="preserve">
+    <value>Bekliyor</value>
+  </data>
+  <data name="Suspended_word" xml:space="preserve">
+    <value>Askıya alındı</value>
+  </data>
+  <data name="NoLogin_word" xml:space="preserve">
+    <value>Giriş Yok</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>Bekliyorum</value>
+  </data>
+  <data name="Restarting_Now_word" xml:space="preserve">
+    <value>Şimdi Yeniden Başlatılıyor</value>
+  </data>
+  <data name="Quitting_word" xml:space="preserve">
+    <value>Çıkma</value>
+  </data>
+  <data name="Booting_word" xml:space="preserve">
+    <value>Önyükleme</value>
+  </data>
+  <data name="SSDelay" xml:space="preserve">
+    <value>Saniyeler içinde kapatma</value>
+  </data>
+  <data name="Recycling_Up_word" xml:space="preserve">
+    <value>Geri Dönüşüm</value>
+  </data>
+  <data name="ViewAllMaps" xml:space="preserve">
+    <value>Tüm Haritaları Görüntüle</value>
+  </data>
+  <data name="Wait_For_scripts" xml:space="preserve">
+    <value>Komut Dosyalarını Bekleyin</value>
+  </data>
+  <data name="SecondsTips" xml:space="preserve">
+    <value>Bir avatrar ayrıldıktan sonra çalışan bir Bölge ne kadar süre ayakta kalacak</value>
+  </data>
+  <data name="Home_Stopped" xml:space="preserve">
+    <value>Ev Durduruldu</value>
+  </data>
+  <data name="Recycling_Down_word" xml:space="preserve">
+    <value>Geri Dönüşüm</value>
   </data>
 </root>
