--- a/Installer_Src/Setup DreamWorld/My Project/Resources.vi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.vi.resx
@@ -2664,7 +2664,7 @@
   <data name="Region_full_msg" xml:space="preserve">
     <value>Số lượng Ảnh đại diện + NPC tối đa</value>
   </data>
-  <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
+  <data name="c" xml:space="preserve">
     <value>Không tải được INI cài đặt</value>
   </data>
   <data name="Setup_Graphs_word" xml:space="preserve">
@@ -2879,5 +2879,47 @@
   </data>
   <data name="Seconds_word" xml:space="preserve">
     <value>giây</value>
+  </data>
+  <data name="Pending_word" xml:space="preserve">
+    <value>Đang chờ xử lý</value>
+  </data>
+  <data name="Suspended_word" xml:space="preserve">
+    <value>Bị đình chỉ</value>
+  </data>
+  <data name="NoLogin_word" xml:space="preserve">
+    <value>Không có đăng nhập</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>Đang chờ đợi</value>
+  </data>
+  <data name="Restarting_Now_word" xml:space="preserve">
+    <value>Khởi động lại ngay bây giờ</value>
+  </data>
+  <data name="Quitting_word" xml:space="preserve">
+    <value>Bỏ cuộc</value>
+  </data>
+  <data name="Booting_word" xml:space="preserve">
+    <value>Khởi động</value>
+  </data>
+  <data name="SSDelay" xml:space="preserve">
+    <value>Tắt sau vài giây</value>
+  </data>
+  <data name="Recycling_Up_word" xml:space="preserve">
+    <value>Tái chế</value>
+  </data>
+  <data name="ViewAllMaps" xml:space="preserve">
+    <value>Xem tất cả bản đồ</value>
+  </data>
+  <data name="Wait_For_scripts" xml:space="preserve">
+    <value>Chờ tập lệnh</value>
+  </data>
+  <data name="SecondsTips" xml:space="preserve">
+    <value>Vùng đang hoạt động sẽ hoạt động trong bao lâu sau khi avatrar rời đi</value>
+  </data>
+  <data name="Home_Stopped" xml:space="preserve">
+    <value>Trang chủ đã dừng</value>
+  </data>
+  <data name="Recycling_Down_word" xml:space="preserve">
+    <value>Tái chế</value>
   </data>
 </root>
