--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -1020,7 +1020,7 @@
   <data name="Failed_LAN" xml:space="preserve">
     <value>Αποτυχία σύνδεσης στο web site.</value>
   </data>
-  <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
+  <data name="c" xml:space="preserve">
     <value>Αποτυχία φόρτωσης ρυθμίσεων INI</value>
   </data>
   <data name="Fatal_word" xml:space="preserve">
@@ -2909,5 +2909,17 @@
   </data>
   <data name="Restarting_Now_word" xml:space="preserve">
     <value>Επανεκκίνηση τώρα</value>
+  </data>
+  <data name="SSDelay" xml:space="preserve">
+    <value>Τερματισμός σε δευτερόλεπτα</value>
+  </data>
+  <data name="ViewAllMaps" xml:space="preserve">
+    <value>Προβολή όλων των χαρτών</value>
+  </data>
+  <data name="Wait_For_scripts" xml:space="preserve">
+    <value>Περιμένετε σενάρια</value>
+  </data>
+  <data name="SecondsTips" xml:space="preserve">
+    <value>Πόσο καιρό μια Περιοχή που τρέχει θα παραμείνει μετά από ένα avatrar έχει φύγει</value>
   </data>
 </root>
