--- a/Installer_Src/Setup DreamWorld/My Project/Resources.eu.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.eu.resx
@@ -1020,7 +1020,7 @@
   <data name="Failed_LAN" xml:space="preserve">
     <value>Huts egin itzazu konektatu.</value>
   </data>
-  <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
+  <data name="c" xml:space="preserve">
     <value>Huts ezarpenak INI kargatu</value>
   </data>
   <data name="Fatal_word" xml:space="preserve">
@@ -2879,5 +2879,47 @@
   </data>
   <data name="Seconds_word" xml:space="preserve">
     <value>segundo</value>
+  </data>
+  <data name="Pending_word" xml:space="preserve">
+    <value>Zain</value>
+  </data>
+  <data name="Suspended_word" xml:space="preserve">
+    <value>Etenda</value>
+  </data>
+  <data name="NoLogin_word" xml:space="preserve">
+    <value>Saioa hasi gabe</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>Itxaroten</value>
+  </data>
+  <data name="Restarting_Now_word" xml:space="preserve">
+    <value>Berrabiarazten Orain</value>
+  </data>
+  <data name="Quitting_word" xml:space="preserve">
+    <value>Utzi</value>
+  </data>
+  <data name="Booting_word" xml:space="preserve">
+    <value>Abiaraztea</value>
+  </data>
+  <data name="SSDelay" xml:space="preserve">
+    <value>Itzali segundotan</value>
+  </data>
+  <data name="Recycling_Up_word" xml:space="preserve">
+    <value>Birziklatzen gora</value>
+  </data>
+  <data name="ViewAllMaps" xml:space="preserve">
+    <value>Ikusi mapa guztiak</value>
+  </data>
+  <data name="Wait_For_scripts" xml:space="preserve">
+    <value>Itxaron Script-ak</value>
+  </data>
+  <data name="SecondsTips" xml:space="preserve">
+    <value>Korrika egiten duen Eskualde batek zenbat denbora iraungo duen avatrar bat utzi ondoren</value>
+  </data>
+  <data name="Home_Stopped" xml:space="preserve">
+    <value>Etxea geldituta</value>
+  </data>
+  <data name="Recycling_Down_word" xml:space="preserve">
+    <value>Birziklatzea Behera</value>
   </data>
 </root>
