--- a/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
@@ -1020,7 +1020,7 @@
   <data name="Failed_LAN" xml:space="preserve">
     <value>Ekki tókst að tengjast vefsíðu.</value>
   </data>
-  <data name="Failed_to_load_Settings_INI_word" xml:space="preserve">
+  <data name="c" xml:space="preserve">
     <value>Mistókst að hlaða INI</value>
   </data>
   <data name="Fatal_word" xml:space="preserve">
@@ -2879,5 +2879,47 @@
   </data>
   <data name="Seconds_word" xml:space="preserve">
     <value>Sekúndur</value>
+  </data>
+  <data name="Pending_word" xml:space="preserve">
+    <value>Í bið</value>
+  </data>
+  <data name="Suspended_word" xml:space="preserve">
+    <value>Frestað</value>
+  </data>
+  <data name="NoLogin_word" xml:space="preserve">
+    <value>Engin innskráning</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>Bið</value>
+  </data>
+  <data name="Restarting_Now_word" xml:space="preserve">
+    <value>Endurræstu núna</value>
+  </data>
+  <data name="Quitting_word" xml:space="preserve">
+    <value>Hætta</value>
+  </data>
+  <data name="Booting_word" xml:space="preserve">
+    <value>Stígvél</value>
+  </data>
+  <data name="SSDelay" xml:space="preserve">
+    <value>Lokun á nokkrum sekúndum</value>
+  </data>
+  <data name="Recycling_Up_word" xml:space="preserve">
+    <value>Endurvinnsla Upp</value>
+  </data>
+  <data name="ViewAllMaps" xml:space="preserve">
+    <value>Skoða öll kort</value>
+  </data>
+  <data name="Wait_For_scripts" xml:space="preserve">
+    <value>Bíddu eftir handritum</value>
+  </data>
+  <data name="SecondsTips" xml:space="preserve">
+    <value>Hve lengi hlaupandi svæði mun vera vakandi eftir að ljósmyndari er farinn</value>
+  </data>
+  <data name="Home_Stopped" xml:space="preserve">
+    <value>Heima hætt</value>
+  </data>
+  <data name="Recycling_Down_word" xml:space="preserve">
+    <value>Endurvinnsla niður</value>
   </data>
 </root>
