--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3154,9 +3154,6 @@
   <data name="Region_full_msg" xml:space="preserve">
     <value>Max number of Avatars + NPCs</value>
   </data>
-  <data name="c" xml:space="preserve">
-    <value>Failed to load Settings INI</value>
-  </data>
   <data name="Setup_Graphs_word" xml:space="preserve">
     <value>Setup Graphs</value>
   </data>
@@ -3390,5 +3387,47 @@
   </data>
   <data name="wave" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wave.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BadCoordinates" xml:space="preserve">
+    <value>Bad coordinates</value>
+  </data>
+  <data name="CautionOAR" xml:space="preserve">
+    <value>Caution! This will load 150+ OARS and regions into your system. This will take a long time.</value>
+  </data>
+  <data name="Caution_word" xml:space="preserve">
+    <value>Caution!</value>
+  </data>
+  <data name="Diskspacelow" xml:space="preserve">
+    <value>Disk space is critically low!</value>
+  </data>
+  <data name="EnterEstateName" xml:space="preserve">
+    <value>Set the Estate name in the DOS box.</value>
+  </data>
+  <data name="Loaded_word" xml:space="preserve">
+    <value>loaded.</value>
+  </data>
+  <data name="LoadFreeOars" xml:space="preserve">
+    <value>Load All Free Oars</value>
+  </data>
+  <data name="SmartStartEnable" xml:space="preserve">
+    <value>Smart Start (Alpha code) setting</value>
+  </data>
+  <data name="SSisDisabled" xml:space="preserve">
+    <value>Smart Start  (Alpha code) in Settings-&gt;Smart Start is disabled.</value>
+  </data>
+  <data name="SSisEnabled" xml:space="preserve">
+    <value>Smart Start (Alpha) code in Settings-&gt;Smart Start is enabled.</value>
+  </data>
+  <data name="StartingLocation" xml:space="preserve">
+    <value>Starting Location?</value>
+  </data>
+  <data name="WhatEstate" xml:space="preserve">
+    <value>What Estate?</value>
+  </data>
+  <data name="WhatEstateName" xml:space="preserve">
+    <value>What Estate name do you want? Blank = you have to input it 150+ times!</value>
+  </data>
+  <data name="WheretoStart" xml:space="preserve">
+    <value>Where to start? (Regions grow to the right and upward)</value>
   </data>
 </root>
